--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>jmchainwebsite</title>
+    <title>J&M &mdash; 劲米科技</title>
+    <link rel="shortcut icon" href="/static/logo_black_20x20.png" type="image/x-icon">
   </head>
   <body>
     <div id="app"></div>
