build sounds mart

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>J&M &mdash; 劲米科技</title>
+    <meta name="keywords" content="J&M区块链版权交易平台,音频、视频、图文版权购买网站,游戏音乐制作,视频背景音乐,版权音乐库,版权音乐购买,如何购买音乐版权,广告背景音乐,背景音乐">
+    <meta name="description" content="J&M区块链版权交易平台是全球领先的互联网文娱版权购买网站，为您提供一站式的文娱正版化解决方案。">
     <link rel="shortcut icon" href="/static/logo_black_20x20.png" type="image/x-icon">
   </head>
   <body>
